feature - actors channel is now using the API Flow approach